        if the job will be sent to CUPS or not.
    + debian/patches/*:
      - Refreshed.
    + debian/libgtk3.0-0.symbols:
      - Updated.
    + debian/libgtk3.0-*.{install.in,manpages},
      debian/rules:
      - Install manpages and binaries with the -3.0 suffix as upstream has
        stopped doing so.
  * Switch to CDBS' flavours system.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jan 2011 20:08:53 +0000

gtk+3.0 (2.91.6-1) experimental; urgency=low

  * New upstream release.
    + debian/patches/004_git_dont_setup_timeout_twice.patch:
      - Removed, included upstream.
    + debian/patches/004_git_add_missing_include.patch:
      - New patch from upstream git, add a missing include that
        otherwise caused the build to fail when disabling X extensions.
    + debian/patches/006_reenable_pixbuf_engine.patch:
      - New patch. Build the pixbuf engine even if it hasn't been ported to
        the new GtkThemingEngine API.
    + debian/patches/*:
      - Refreshed.
    + debian/libgtk3.0-0.symbols:
      - Updated.
      - Add Build-Depends-Package.
    + debian/rules:
      - Bumped the shver.
      - Disable silent builds.
  * Let gir1.2-gtk-3.0 replace gir1.0-gtk-3.0.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 18 Dec 2010 16:00:23 +0000

gtk+3.0 (2.91.5-2) experimental; urgency=low

  * debian/control.in,
    debian/rules:
    + Remove the chrpath hack, it's been fixed in libtool.
  * Update to the new gir policy:
    - Rename gir1.0-gtk-3.0 to gir1.2-gtk-3.0.
    - Bump the gobject-introspection build dependency.
    - Build depend on gir1.2 packages.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 12 Dec 2010 16:03:02 +0100

gtk+3.0 (2.91.5-1) experimental; urgency=low

  * New upstream release.
    + debian/patches/004_gtk_gir_build.patch:
      - Removed, fixed upstream.
    + debian/patches/004_git_dont_setup_timeout_twice.patch:
      - New patch from upstream git, don't setup a timeout in
        gtkspinners twice.