@@ -40,6 +40,9 @@ gtk+3.0 (2.99.0-1) UNRELEASED; urgency=low
       - Install manpages and binaries with the -3.0 suffix as upstream has
         stopped doing so.
   * Switch to CDBS' flavours system.
+  * debian/rules:
+    - Remove hack to build on PowerPC64. That port is death, and if it's
+      ever back, hopefully we won't need to workaround toolchain issues.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jan 2011 20:08:53 +0000
 
